# python-binary-wheel-builder

./: .coverage  .gitignore  .pre-commit-config.yaml  .releaserc.json  CHANGELOG.md  CONTRIBUTING.md  README.md  all-documents.html  api.build.WheelBuildException.html  api.build.html  api.html  api.meta.Wheel.html  api.meta.WheelFileEntry.html  api.meta.WheelPlatformBuildResult.html  api.meta.WheelPlatformIdentifier.html  api.meta.WheelSource.html  api.meta.html  api.well_known_platforms.html  api.wheel_sources.exceptions.SourceFileRequestFailed.html  api.wheel_sources.exceptions.UnsupportedWheelPlatformException.html  api.wheel_sources.exceptions.WheelSourceException.html  api.wheel_sources.exceptions.html  api.wheel_sources.github.GithubReleaseBinarySource.html  api.wheel_sources.github.html  api.wheel_sources.github_test.html  api.wheel_sources.gitlab_package_registry.GitlabGenericPackageRegistrySource.html  api.wheel_sources.gitlab_package_registry.html  api.wheel_sources.gitlab_package_registry_test.html  api.wheel_sources.html  api.wheel_sources.platform_based_file.PlatformBasedFileSource.html  api.wheel_sources.platform_based_file.html  api.wheel_sources.platform_based_file_test.html  api.wheel_sources.static.StaticLocalWheelSource.html  api.wheel_sources.static.html  apidocs-help.html  classIndex.html  fullsearchindex.json  index.html  moduleIndex.html  nameIndex.html  (+5 more)
.circleci/: config.yml
binary_wheel_builder/: __init__.py  __main__.py  __version__.py  index.html  wrapper_templates.html  wrapper_templates.py  wrapper_templates_test.py
binary_wheel_builder/api/: __init__.py  _build.py  _meta.py  _wheel_extensions.py  _wheel_sources.py  _wheel_util.py  build.html  build.py  index.html  meta.html  meta.py  well_known_platforms.html  well_known_platforms.py
binary_wheel_builder/api/wheel_sources/: __init__.py  exceptions.html  exceptions.py  github.html  github.py  github_test.html  github_test.py  gitlab_package_registry.html  gitlab_package_registry.py  gitlab_package_registry_test.html  gitlab_package_registry_test.py  index.html  platform_based_file.html  platform_based_file.py  platform_based_file_test.html  platform_based_file_test.py  static.html  static.py
binary_wheel_builder/cli/: __init__.py  config_file.html  config_file.py  index.html  main.html  main.py  yaml.html  yaml.py  yaml_test.html  yaml_test.py
binary_wheel_builder/wheel/: __init__.py  index.html  reproducible.html  reproducible.py  reproducible_test.html  reproducible_test.py  util.html  util.py  util_test.html  util_test.py
binary_wheel_bundler/: __init__.py  _build.py  _meta.py  _wheel_extensions.py  _wheel_sources.py  _wheel_util.py  well_known_platforms.py
cli_wheel_builder/: __init__.py  __main__.py  _build.py  _meta.py  _wheel_extensions.py  _wheel_sources.py  _wheel_util.py  well_known_platforms.py
cli_wheel_builder/api/: __init__.py  _build.py  _wheel_extensions.py  _wheel_sources.py  _wheel_util.py  well_known_platforms.py
cli_wheel_builder/cli/: config_file.py  main.py
dev/: generate_json_schema.py
integration_tests/: cli_test.py  github_releases_test.py  util.py  write_test.py
integration_tests/testdata/: wheel.yaml
test-results/: junit.xml
tests/: cli_test.py  github_releases_test.py  util.py  write_test.py
tests/testdata/: README.md  wheel.yaml
