[tool.poetry]
name = "binary_wheel_builder"
version = "0.1.0"
description = "Bundle CLI applications as wheel to use them in code or as standalone binary"
authors = ["Timo Reymann <mail@timo-reymann.de>"]
readme = "README.md"
packages = [
    { include = "cli_wheel_builder" }
]
[tool.poetry.dependencies]
python = "> 3.8"
wheel = "> 0.30.0"
pyyaml = { version = "^6.0.1", optional = true }

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pyyaml = "^6.0.1"

[tool.poetry.extras]
cli = ["pyyaml"]

[tool.poetry.scripts]
cli-wheel-builder = "cli_wheel_builder.cli.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
