[tool.poetry]
name = "binary_wheel_builder"
version = "3.3.0"
description = "Bundle CLI applications or other binary data as wheel to use them in code or as standalone binary"
authors = ["Timo Reymann <mail@timo-reymann.de>"]
readme = "README.md"
packages = [
    { include = "binary_wheel_builder" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Environment :: Console",
    "Environment :: MacOS X",
    "Operating System :: POSIX",
    "Operating System :: Unix",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Code Generators",
    "Topic :: System :: Software Distribution"
]
include = [
    "wheel.schema.json",
    "LICENSE"
]
repository = "https://github.com/timo-reymann/python-binary-wheel-builder"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/timo-reymann/python-binary-wheel-builder/issues"


[tool.poetry.dependencies]
python = "> 3.9"
wheel = "> 0.30.0"
pyyaml = { version = "^6.0.1", optional = true }
pydantic = "^2.5.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
coverage = "^7.4.0"
pdoc3 = "^0.10.0"
pydoctor = "^24.3.3"

[tool.poetry.extras]
cli = ["pyyaml"]

[tool.poetry.scripts]
binary-wheel-builder = "binary_wheel_builder.cli.main:main"

[tool.coverage.run]
omit = [
    ".*",
    "*/site-packages/*",
    "*/*_test.py",
    "integration_test/*",
    "dev/*"
]

[tool.coverage.report]
fail_under = 70

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pydoctor]
verbose = 0
warnings-as-errors = true

intersphinx = ["https://docs.python.org/3/objects.inv"]
docformat = "restructuredtext"
html-output = "gh-pages"

add-package = ["binary_wheel_builder.api"]
project-name = "binary_wheel_builder"
project-url = "https://github.com/timo-reymann/python-binary-wheel-builder"
privacy = [
    "HIDDEN:binary_wheel_builder.**.*_test",
    "HIDDEN:binary_wheel_builder.*_test",
    "HIDDEN:binary_wheel_builder.conftest"
]

theme = "base"
template-dir = "pydoctor-theme"
